Fixing blur bug and alignement

--- a/client/src/Components/Characters/Characters.css
+++ b/client/src/Components/Characters/Characters.css
@@ -1,20 +1,23 @@
 .characters {
     width: 100%;
     flex: 6;
-    padding: 2vw;
-    display: flex;
     flex-direction: row;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
     z-index: 2;
-    padding: 6px;
 }
 
-.appear {
+.appear-wrapper {
     animation: 0.5s ease-in-out appear;
-}
-
-.disappear {
-    animation: 0.5s ease-in-out disappear;
+    width: 100%;
+    height: 100%;
+    flex-direction: row;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 @keyframes appear {
@@ -29,20 +32,5 @@
     100% {
       filter: blur(0px);
       transform: scale(1);
-    }
-}
-
-@keyframes disappear {
-    0% {
-      filter: blur(0px);
-      transform: scale(1);
-    }
-    50% {
-        filter: blur(4px);
-        transform: scale(1.01);
-    }
-    100% {
-        filter: blur(30px);
-        transform: scale(0.4);
     }
 }
